<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30sp"
    tools:context=".ui.fragments.VerificationFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/etverificationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/title"
            android:text="@string/framgent_completed_veri"
            android:textAllCaps="true"
            android:textColor="@color/titulo"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/email"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Codigo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/framgent_completed_numeroveri"
            android:textColorHint="@color/titulo"
            app:boxStrokeColor="@color/titulo"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/titulo"
            app:hintTextColor="@color/titulo"
            app:startIconDrawable="@drawable/icono_number"
            app:startIconTint="@color/titulo"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/titulo"
                android:id="@+id/txtCodigo"
                android:maxLength="6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/contenedorButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">


            <Button
                android:id="@+id/btnComprobarCodigo"
                style="@style/botones"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/framgent_completed_comprobar"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnReenviarCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.90"
                android:backgroundTint="@color/botones_disable"
                android:enabled="true"
                android:text="@string/framgent_completed_reenviarCodigo"
                android:textColor="@color/botones_text"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnVerificacionCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/framgent_completed_finalizar"
            android:textColor="@color/white"
            android:visibility="gone" />


    </LinearLayout>


</ScrollView>