<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/btnregisterBACK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/icono_flecha_atras" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/tvRegisterTitle"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:fontFamily="@font/title"
               android:text="@string/framgent_login_crearcuenta"
               android:textAllCaps="true"
               android:textColor="@color/titulo"
               android:textSize="41sp"
               android:layout_weight="1"/>

           <com.airbnb.lottie.LottieAnimationView
               android:visibility="gone"
               android:layout_weight="1"
               android:id="@+id/animation_view"
               android:layout_width="150dp"
               android:layout_height="150dp"
               android:layout_gravity="center"
               app:lottie_rawRes="@raw/loading"
               app:lottie_autoPlay="true"
               app:lottie_loop="true" />

       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Usuario"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/framgent_register_nombreusuario"
                android:textColorHint="@color/texto"
                app:boxStrokeColor="@color/texto"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/texto"
                app:hintTextColor="@color/texto"
                app:startIconDrawable="@drawable/icono_person"
                app:startIconTint="@color/texto">


                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/texto"
                    android:id="@+id/txtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Correo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/framgent_login_correo"
                android:textColorHint="@color/texto"
                app:boxStrokeColor="@color/texto"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/texto"
                app:hintTextColor="@color/texto"
                app:startIconDrawable="@drawable/icono_email"
                app:startIconTint="@color/texto">


                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/texto"
                    android:id="@+id/txtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Contrasena"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/framgent_login_contraseña"
                android:textColorHint="@color/texto"
                app:boxStrokeColor="@color/texto"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/texto"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/texto"
                app:startIconDrawable="@drawable/icono_candado"
                app:startIconTint="@color/texto">


                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/texto"
                    android:id="@+id/txtContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ConfirmarContrasena"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/framgent_register_confirmcontrasenia"
                android:textColorHint="@color/texto"
                app:boxStrokeColor="@color/texto"
                app:boxStrokeWidthFocused="2dp"
                app:endIconTint="@color/texto"
                app:hintTextColor="@color/texto"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/texto"
                app:startIconDrawable="@drawable/icono_candado"
                app:startIconTint="@color/texto">


                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/texto"
                    android:id="@+id/txtConfirmarContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btnRegisterNEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:text="@string/framgent_register_next"
            style="@style/botones"/>


        <Button
            android:id="@+id/btnRegisterL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/botones_background2"
            android:elevation="5dp"
            android:text="@string/loginregistrerfragment_acceso"
            android:textColor="@color/botones_text2" />

    </LinearLayout>

</ScrollView>